# Py6Web_HW3

./: .dockerignore  README.md  _setup.py  pyproject.toml  requirements.txt
console_bot/: __init__.py  interface.py
